src/sass/style.scss
/* ... */
/* ==========================================================================
   KG Cards
   ========================================================================== */
.post-content {
	figure figcaption {
		position: relative;
		color: var(--color-content-secondary);
		max-width: $inner;
		margin: auto;
		font-size: 0.75em;
		line-height: 2em;
		padding: 2rem 0;

		&:after {
			content: '';
			position: absolute;
			left: 0;
			bottom: 0;
			width: 8rem;
			height: 1px;
			background: var(--color-background-contrast);
		}

		a {
			box-shadow: inset 0 -1px 0 var(--color-background-contrast);

			&:focus,
			&:hover {
				box-shadow: inset 0 -2px 0 var(--color-background-contrast);
			}
		}
	}
	// KG Image
	.kg-image-card {
		margin: 0 0 4rem;
		max-width: none !important;

		&.kg-width-wide {
			max-width: calc(72rem + 24vw) !important;
			min-width: 100%;
			width: calc(100vw - 4rem);

			figcaption {
				padding-left: 6rem;
				padding-right: 6rem;
				@media only screen and (max-width: $breakpoint-medium) {
					padding-left: 2rem;
					padding-right: 2rem;
				}

				&:after {
					margin-left: 6rem;
					@media only screen and (max-width: $breakpoint-medium) {
						margin-left: 2rem;
					}
				}
			}
		}

		&.kg-width-full {
			max-width: none;
			width: 100vw;
			margin-top: 2em;

			figcaption {
				padding-left: 8rem;
				padding-right: 8rem;
				@media only screen and (max-width: $breakpoint-medium) {
					padding-left: 4rem;
					padding-right: 4rem;
				}

				&:after {
					margin-left: 8rem;
					@media only screen and (max-width: $breakpoint-medium) {
						margin-left: 4rem;
					}
				}
			}
		}

		.kg-image {
			margin: 0 auto;
		}

		.kg-image-full + figcaption {
			margin-bottom: 1.33334em;
		}
	}
	// KG Gallery
	.kg-gallery-card {
		margin: 0 0 4rem;
		max-width: calc(72rem + 24vw) !important;
		min-width: 100%;
		width: calc(100vw - 4rem);

		figcaption {
			padding-left: 6rem;
			padding-right: 6rem;
			@media only screen and (max-width: $breakpoint-medium) {
				padding-left: 2rem;
				padding-right: 2rem;
			}

			&:after {
				margin-left: 6rem;
				@media only screen and (max-width: $breakpoint-medium) {
					margin-left: 2rem;
				}
			}
		}
	}

	.kg-gallery-container {
		display: flex;
		flex-direction: column;
	}

	.kg-gallery-row {
		display: flex;
		flex-direction: row;
		justify-content: center;
	}

	.kg-gallery-image img {
		display: block;
		margin: 0;
		width: 100%;
		height: 100%;
	}

	.kg-gallery-row:not(:first-of-type) {
		margin: 0.75em 0 0;
	}

	.kg-gallery-image:not(:first-of-type) {
		margin: 0 0 0 0.75em;
	}
	// KG Embed
	.kg-embed-card {
		margin: 0 0 4rem;

		> * {
			margin-left: auto;
			margin-right: auto;
		}
	}
	// KG Code
	.kg-code-card {
		min-width: 100%;
		margin: 0 0 4rem;
	}

	.kg-code-card pre {
		margin: 0;
	}
	// KG Bookmark
	.kg-bookmark-card {
		width: 100%;
		margin: 0 0 4rem;
	}

	.kg-bookmark-container {
		display: flex;
		text-decoration: none;
		min-height: 8em;
		background: var(--color-background-secondary);
		border: 1px solid var(--color-background-contrast);
		box-shadow: none !important;
		overflow: hidden;
	}

	.kg-bookmark-content {
		text-rendering: optimizeLegibility;
		display: flex;
		flex-direction: column;
		flex-grow: 1;
		align-items: flex-start;
		justify-content: start;
		padding: 1.5em;
		color: var(--color-content-secondary);
	}

	.kg-bookmark-title {
		color: var(--color-content-main);
		font-size: 0.75em;
		line-height: 1.66667em;
		font-weight: 700;
		letter-spacing: 0.5px;
	}

	.kg-bookmark-description {
		display: -webkit-box;
		font-size: 0.75em;
		line-height: 1.66667em;
		font-weight: 400;
		margin-top: 0.33334em;
		max-height: 3.33334em;
		overflow-y: hidden;
		-webkit-line-clamp: 2;
		-webkit-box-orient: vertical;
	}

	.kg-bookmark-thumbnail {
		position: relative;
		min-width: 33%;
		max-height: 100%;
	}

	.kg-bookmark-thumbnail img {
		position: absolute;
		top: 0;
		left: 0;
		width: 100%;
		height: 100%;
		object-fit: cover;
	}

	.kg-bookmark-metadata {
		text-rendering: optimizeLegibility;
		display: flex;
		align-items: center;
		font-size: 0.75em;
		line-height: 1.66667em;
		color: var(--color-content-main);
		font-weight: 400;
		margin-top: 1em;
		flex-wrap: wrap;
	}

	.kg-bookmark-icon {
		width: 1.33334em;
		margin: 0 0.75em 0 0;
	}

	.kg-bookmark-author:after {
		content: "•";
		margin: 0 0.33334em;
	}

	.kg-bookmark-publisher {
		color: var(--ghost-accent-color);
	}
	@media (max-width: $breakpoint-medium) {
		.kg-bookmark-container {
			flex-direction: column;
		}

		.kg-bookmark-thumbnail {
			order: 1;
			width: 100%;
			min-height: 160px;
		}

		.kg-bookmark-thumbnail img {
			border-radius: 3px 3px 0 0;
		}

		.kg-bookmark-content {
			order: 2;
		}
	}
}
/* ==========================================================================
    Misc
    ========================================================================== */
.clear {
	clear: both;
}

.hidden {
	display: none;
}
@keyframes fadein {
	0% {
		opacity: 0.2;
	}

	100% {
		opacity: 0.9;
	}
}

.avatar {
	position: relative;
	overflow: hidden;
	margin: 0;
	border: 2px solid var(--color-background-contrast);
	background: var(--color-background-contrast);
	box-sizing: border-box;

	&:after,
	&:before {
		content: '';
		position: absolute;
		z-index: 1;
		width: 50%;
		height: 50%;
		bottom: 32.5%;
		left: 25%;
		border-radius: 100%;
		background: var(--color-background-secondary);
		box-sizing: border-box;
	}

	&:after {
		width: 80%;
		bottom: -25%;
		left: 10%;
	}

	img {
		position: relative;
		z-index: 2;
		display: block;
		width: 100%;
		height: 100%;
		object-fit: cover;
	}
}
/* ... */

